# trade-remedies-caseworker

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CODEOWNERS  Dockerfile  Makefile  Procfile  README.md  docker-compose-test.yml  docker-compose.yml  example.env  gulpfile.js  local.env.example  manage.py  manifest.yml  package-lock.json  package.json  pii-ner-exclude.txt  pii-secret-exclude.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_e2e_tests.sh  start.sh  test.env
.circleci/: config.yml
.copilot/: config.yml  image_build_run.sh
.pii-secret-hook/file_content/: pii-secret-log
.pii-secret-hook/ner/: pii-secret-log
e2e/: conftest.py  test_caseworker_login.py  test_verify_reg_of_interest_journey.py  test_verify_repr_invite.py  utils.py
fitness/: fitness_metrics.db
requirements/: base.txt  dev.txt  prod.txt
requirements.in/: base.in  dev.in  prod.in
trade_remedies_caseworker/: .flake8  CHANGELOG.md  manage.py  pytest.ini  sass.sh
trade_remedies_caseworker/cases/: submissions.py  tests.py  urls.py  utils.py  views.py
trade_remedies_caseworker/cases/v2/: forms.py
trade_remedies_caseworker/cases/v2_views/: organisation_verification_process.py
trade_remedies_caseworker/config/: base_views.py  cf_env.py  context_processors.py  db.sqlite3  gunicorn.py  middleware.py  test_bases.py  urls.py  wsgi.py
trade_remedies_caseworker/config/forms/: __init__.py  fields.py  widgets.py
trade_remedies_caseworker/config/settings/: base.py  local.py  prod.py  test.py
trade_remedies_caseworker/core/: __init__.py  apps.py  auth.py  base.py  constants.py  decorators.py  models.py  urls.py  utils.py  views.py
trade_remedies_caseworker/core/templatetags/: application_heading.py  ascii.py  badge.py  case_type_badge.py  confidential.py  confidential_toggle.py  custom_filters.py  debug.py  deep_index.py  document_link.py  ellipsis_short.py  form_error.py  format_date.py  from_json.py  get_feature_flag.py  get_item.py  get_item_length.py  get_range.py  link_or_not.py  number_blob.py  overdue_warning.py  page_range.py  pluralize.py  reg_exp.py  set.py  table_heading.py  task_disabled.py  text_element.py  to_json.py
trade_remedies_caseworker/core/tests/: test_feedback.py  test_health_check_view.py  test_utils.py  utils.py
trade_remedies_caseworker/documents/: urls.py  utils.py  views.py
trade_remedies_caseworker/features/: environment.py
trade_remedies_caseworker/features/landing/: home.feature
trade_remedies_caseworker/features/steps/: landing.py  your_steps.py
trade_remedies_caseworker/login/: views.py
trade_remedies_caseworker/organisations/: forms.py  tests.py  urls.py  views.py
trade_remedies_caseworker/password/: views.py
trade_remedies_caseworker/tasks/: urls.py  views.py
trade_remedies_caseworker/templates/: 400.html  403.html  404.html  500.html  base.html  env_banner.html  footer.html  forgot_password.html  login.html  modal_error.html  reset_password.html  system_info.html  two_factor.html
trade_remedies_caseworker/tests/: models.py
trade_remedies_caseworker/trade_remedies_caseworker/: context_processors.py  db.sqlite3  file_handlers.py  gunicorn.py  middleware.py  urls.py  wsgi.py
trade_remedies_caseworker/users/: urls.py  views.py
(+349 files in other folders)
