[tool.poetry]
name = "Trade Remedies Caseworker"
version = "1.0.0"
description = "Trade Remedies Caseworker"
authors = ["Chris Pettinga <chris.pettinga@digital.trade.gov.uk>"]

[build-system]
requires = ["poetry-core^1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~=4.2.16"
Markdown = "2.6.11"
boto3 = "1.17.89"
certifi = "^2024.7.4"
django-audit-log-middleware = "0.0.4"
django-basicauth = "0.5.2"
django-cache-memoize = "0.2.0"
django-chunk-upload-handlers = "0.0.12"
django-countries = "7.2.1"
django-environ = "0.4.5"
django-extensions = "3.1.5"
django-govuk-forms = "0.5"
django-govuk-template = "0.6"
django-ip-restriction = "1.1.1"
django-log-formatter-ecs = "0.0.5"
django-redis = "5.2.0"
django-session-timeout = "0.1.0"
django-storages = "1.11.1"
django-timezone-field = "4.2.3"
dpath = "2.1.6"
openpyxl = "3.0.10"
pytz = "*"
redis = "4.4.4"
requests = "2.32.3"
sentry-sdk = "2.8.0"
sqlparse = "0.5.0"
urllib3 = "1.26.19"
waitress = "2.1.2"
werkzeug = "3.0.3"
whitenoise = "5.3.0"
pillow = "^10.3.0"
trade-remedies-client = {git = "https://github.com/uktrade/trade-remedies-client.git", rev = "master"}
v2-api-client = {git = "https://github.com/uktrade/trs_v2_api_client.git", rev = "master"}
gunicorn = "22.0.0"
gevent = "23.9.1"
lxml = "4.9.1"

[tool.poetry.dev-dependencies]
behave-django = "1.4.0"
black = "24.3.0"
coverage = "*"
codecov = "2.1.13"
djhtml = "*"
flake8 = "5.0.4"
ipython = "^8.10"
matplotlib = "*"
pip-tools = "^7.3.0"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pyproject-flake8 = "5.0.4.post1"
pytest-pythonpath = "*"
pytest-xdist = "*"
selenium = "3.141.0"
traitlets = ">=5"
wheel = ">=0.38.1"
pygments = "2.15.0"
fitness-functions = {git = "https://github.com/uktrade/fitness-functions", rev = "master"}

[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | env
  | .venv
  | .js
  | tests-reports
)/
'''

[tool.flake8]
max-line-length = 100
max-complexity = 10
per-file-ignores = '__init__.py: F401'
import_order_style = 'smarkets'
exclude = '''
/(
    */migrations/*
    | __pycache__
    | manage.py
    | env/*
    | venv/*
    | .venv/*
    | node_modules/*
    | */settings/*
)/
'''
ignore = '''
/(
    C901
    | D100
    | D104
    | D106
    | D200
    | D203
    | D205
    | D400
    | D401
    | W503
    | W504
    | E704
    | E231
    | F841
    | E722
    | E203
)/
'''
application-import-names = '''
/(
    cases
    | contacts
    | core
    | documents
    | govuk_template
    | manage.py
    | tasks
    | templates
    | trade_remedies_caseworker
    | users
)/
'''

[tool.pytest.ini_options]
addopts = '''
    -p no:warnings
    --cov=.
    --no-cov-on-fail
    --cov-config=.coveragerc
    --cov-branch
    --ignore=staticfiles
    -n 4
    -m "not version2"
'''
python_classes='Test*'

python_files = ["test_*.py", "tests.py"]

markers = [
    "version2: marks tests that require API_V2_ENABLED env var set",
    "functional: marks tests that exercise multiple units, e.g. login journey"
    ]

DJANGO_SETTINGS_MODULE = "trade_remedies_caseworker.config.settings.test"
pythonpaths = ". trade_remedies_caseworker"
